@@ -1,3 +1,8 @@
+2002-04-26  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tclObj.c (SetBooleanFromAny): Could not interpret
+	integers that did not look like doubles as booleans [Bug 548686]
+
 2002-04-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tclCmdIL.c (InfoBodyCmd): 
